# GamePackagesLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
.github/workflows/: cmake.yml
Include/GamePackages/: CoreMacros.h  Encryption.h  IDataPackage.h  Packager.h  StreamedPackage.h
Source/: Encryption.cpp  Packager.cpp  StreamedPackage.cpp
